--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,8 +1,8 @@
 :root {
-    --primary-color: #007bff;
+    --primary-color: #a6a9de;
     --secondary-color: #6c757d;
-    --background-color: #f8f9fa;
-    --text-color: #212529;
+    --background-color: #030523;
+    --text-color: #fafcfd;
 }
 
 body {
@@ -13,13 +13,26 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    color: var(--primary-color);
+    color: var(--text-color);
 }
+
 
 .main-layout {
     display: flex;
     flex-direction: row;
     height: 100vh;
+}
+
+button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+button:hover {
+    opacity: 0.8;
 }
 
 .button-primary {
@@ -46,4 +59,136 @@ h1, h2, h3, h4, h5, h6 {
 .modal-footer {
     display: flex;
     justify-content: flex-end;
+}
+
+.content-area {
+    flex: 1;
+    padding: 20px;
+    width: 100%;
+    background: var(--background-color);
+}
+
+.header{
+   font-weight: 700;
+    padding: 10px;
+    width: 100%;
+    font-size: 1.3rem;
+    margin-bottom: 20px;
+    border-radius: 10px;
+     font-weight: 700;
+    box-shadow: 0 2px 10px var(--primary-color);
+    margin-bottom: 10px;
+}
+
+.content{
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px var(--primary-color);
+    min-height: calc(100vh - 200px);
+    display: flex;
+    margin: 20px 50px;
+    justify-content: center;
+}
+
+.item {
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    min-width: calc(100vw - 50vw);
+    justify-content: space-between;
+    position: relative;
+    div, label{
+        padding: 10px;
+    }
+}
+.label-left-item{
+    label{
+        width:20%
+    }
+}
+
+input{
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid var(--primary-color);
+    background-color: transparent;
+    color: var(--text-color);
+}
+input:focus, input:hover {
+    outline: none;
+    border-color: var(--text-color);
+}    
+
+.bottom-action {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    justify-content: flex-end;
+    flex-direction: row;
+    width: 100%;
+    padding: 10px;
+}
+
+.ReactModal__Overlay{
+    z-index: 9999;
+    justify-content: center
+}
+
+.ReactModal__Content{
+    background-color: var(--background-color) !important;
+    padding: 20px;
+    border-radius: 10px !important;
+    box-shadow: 0 2px 10px var(--text-color) !important;
+    width: 50% ;
+    margin-left: 25%;
+}
+
+
+/* Responsive styles */
+@media screen and (max-width: 768px) {
+    .main-layout {
+        flex-direction: column;
+    }
+    .content-area {
+        padding: 10px;
+    }
+    .header {
+        font-size: 1.2rem;
+    }
+    .content {
+        padding: 10px;
+        margin: 10px;
+        min-height: calc(100vh - 40vh);
+    }
+    .item {
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
+    }
+    input {
+        width: 100%;
+    }
+    .bottom-action {
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
+    }
+    .button-primary, .button-secondary {
+        width: 100%;
+        margin-top: 10px;
+    }
+    .ReactModal__Content {
+        width: 80%;
+        margin: 0;
+        padding: 5px;
+        margin: 0 !important;
+    }
+    .ReactModal__Overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        padding: 0 !important;
+        margin: 0 !important;
+    }
 }
