--- a/src/navigation/NavBar.css
+++ b/src/navigation/NavBar.css
@@ -1,9 +1,14 @@
-.smallsidebar, .slidebar {
+.smallsidebar,
+.slidebar {
   height: 100%;
   width: 200px;
   transition: 0.5 ease;
   cursor: pointer;
-  background: linear-gradient(90deg, var(--primary-color), var(--secondary-color));
+  background: linear-gradient(
+    90deg,
+    var(--primary-color),
+    var(--secondary-color)
+  );
   color: var(--background-color);
   z-index: 1;
 }
@@ -25,7 +30,6 @@
   flex-direction: row;
   gap: 1rem;
   padding: 10px;
-
 }
 
 .menu-items.logout {
@@ -33,14 +37,13 @@
   bottom: 10px;
 }
 
-
 .active-menu {
   color: var(--text-color);
   background: var(--background-color);
 }
 
 .active-menu svg {
-  color:var(--text-color);
+  color: var(--text-color);
 }
 
 .bigsidebar .menu-items {
@@ -60,33 +63,39 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
+    background: var(--background-color);
   }
 }
 
-
-
 /* Responsive Design */
 @media screen and (max-width: 768px) {
-  .smallsidebar, .slidebar {
+  .smallsidebar,
+  .slidebar {
     position: fixed;
     bottom: 0;
     width: 100%;
     height: 10vh;
     display: flex;
     flex-direction: row;
-    gap:calc(100% / 20);
+    justify-content: space-evenly;
     .logo {
       display: none;
     }
     .menu-text {
       display: none;
     }
+    .menu-items {
+      margin-bottom: 0;
+      padding: 10px;
+      width: 100%;
+      justify-content: center;
+    }
     .menu-items.logout {
       position: relative;
       bottom: 0;
     }
-    svg{
-        font-size: 2.5rem;
+    svg {
+      font-size: 2.5rem;
     }
   }
 }
