--- a/src/styles/loader.css
+++ b/src/styles/loader.css
@@ -23,7 +23,7 @@
   width: 48px;
   height: 48px;
   border-radius: 50%;
-  border: 2px solid red;
+  border: 2px solid var(--primary-color);
   position: absolute;
   left: 0;
   top: 0;
@@ -41,7 +41,7 @@
 
   100% {
     transform: scale(3);
-    border: 5px solid Yellow;
+    border: 5px solid var(--text-color);
     opacity: 0;
   }
 }
