--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -10,6 +10,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: var(--background-color);
     color: var(--text-color);
+    user-select: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -29,6 +30,7 @@ button {
     border-radius: 5px;
     cursor: pointer;
     font-size: 1rem;
+    min-width:30%;
 }
 
 button:hover {
@@ -88,6 +90,10 @@ button:hover {
     display: flex;
     margin: 20px 50px;
     justify-content: center;
+     animation: appare 1.5s linear;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-fill-mode: forwards;
 }
 
 .item {
@@ -142,6 +148,13 @@ input:focus, input:hover {
     box-shadow: 0 2px 10px var(--text-color) !important;
     width: 50% ;
     margin-left: 25%;
+}
+
+.double-70-30{
+        display: grid;
+    grid-template-columns: 1.5fr 1fr;
+    gap: 1.2rem;
+    padding: 20px;
 }
 
 
